@@ -1,0 +1,1 @@
+All icalendar URLs have changed. Please update your subscriptions.
